src/objects/sked_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>sked_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unavailability</label>
        <referenceTo>sked__Availability__c</referenceTo>
        <relationshipLabel>Exception Logs</relationshipLabel>
        <relationshipName>sked_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Exception_Code__c</fullName>
        <label>Exception Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Job_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Allocation</label>
        <referenceTo>sked__Job_Allocation__c</referenceTo>
        <relationshipLabel>Exception Logs</relationshipLabel>
        <relationshipName>sked_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Exception Logs</relationshipLabel>
        <relationshipName>sked_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Exception Logs</relationshipLabel>
        <relationshipName>sked_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sked_Exception_Code__c</columns>
        <columns>sked_Availability__c</columns>
        <columns>sked_Job__c</columns>
        <columns>sked_Job_Allocation__c</columns>
        <columns>sked_Resource__c</columns>
        <columns>sked_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>